samples/_failures_safe/1761289207_d0a2c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ca16cce.c: In function ‘main’:
./samples/SAFE/__tmp_5ca16cce.c:152:13: error: expected declaration or statement at end of input
  152 |             fprintf(stderr, "Negative weights not supported\n");
      |             ^~~~~~~
./samples/SAFE/__tmp_5ca16cce.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ca16cce.c:152:13: error: expected declaration or statement at end of input
